services/kube-system/monitoring/influxDB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-influxdb
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      task: monitoring
      k8s-app: influxdb
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "30m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: influxdb-storage
          subPath: influxdb
      volumes:
      - name: influxdb-storage
        persistentVolumeClaim:
          claimName: nfs-kubernetes
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    #kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: monitoring-influxdb
  name: monitoring-influxdb
  namespace: kube-system
spec:
  ports:
  - port: 8086
    targetPort: 8086
  selector:
    k8s-app: influxdb
